[package]
name = "lumo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
name = "lumo"

[workspace]
members = ["crates/*"]

[workspace.dependencies]
# Bitcoin and BDK
bitcoin = { version = "0.32.7" }
bdk_wallet = { version = "2.1.0", features = ["keys-bip39", "file_store", "rusqlite"] }
bip39 = { version = "2.2.0", features = ["zeroize"] }

# bitcoin nodes
bdk_esplora = { version = "0.22.1", features = ["async-https", "tokio"] }

# Async runtime
tokio = { version = "1.47.1", features = ["full"] }

# Database
redb = "3.1.0"

# Error handling
thiserror = "2.0.16"
eyre = "0.6.12"

# Serialization
serde = { version = "1.0.227", features = ["derive"] }
serde_json = "1.0.145"

# Logging
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Utilities
derive_more = { version = "2.0.1" }
hex = "0.4.3"
rand = "0.9.2"
once_cell = "1.21.3"
arc-swap = "1.7.1"
base64 = "0.22.1"

# Time
jiff = { version = "0.2.15" }

# IDs and time
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }

[dependencies]
# lumo crates
lumo-types = { path = "./crates/lumo-types" }
lumo-common = { path = "./crates/lumo-common" }
redb = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
clap = { version = "4.5.48", features = ["derive"] }

# bitcoin
bitcoin = { workspace = true }
bdk_wallet = { workspace = true }
bdk_esplora = { workspace = true }
bip39 = { workspace = true }

# async
tokio = { workspace = true }

# error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }

# utilities
derive_more = { workspace = true, features = [
    "display",
    "from",
    "into",
    "deref",
    "deref_mut",
] }

# random number generation
rand = { workspace = true }

# ids and time
uuid = { workspace = true }
chrono = { workspace = true }

# encryption (for mnemonic storage)
base64 = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }

[profile.release]
codegen-units = 1
strip = "debuginfo"
