[package]
name = "lumo-common"
version = "0.1.0"
edition = "2021"

[dependencies]
# bitcoin
bitcoin = { workspace = true }
bdk_wallet = { workspace = true }

# lazy statics
once_cell = { workspace = true }

# error handling
eyre = { workspace = true }
thiserror = { workspace = true }

# logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# serialization
serde = { workspace = true }
serde_json = { workspace = true }

# database
redb = { workspace = true }

# directories
dirs = "6.0"